--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
-  "semi": true,
-  "tabWidth": 2,
-  "printWidth": 100,
+  "semi": false,
   "singleQuote": true,
-  "trailingComma": "none",
-  "jsxBracketSameLine": true
+  "trailingComma": "es5",
+  "printWidth": 80,
+  "tabWidth": 2,
+  "endOfLine": "auto"
 }
