--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,14 +4,12 @@
         "commonjs": true,
         "es2021": true
     },
-    
-   "extends": ["eslint:recommended", 
-    "plugin:react/recommended", 
-    "plugin:eslint-comments/recommended",
-    "plugin:prettier/recommended"],
-
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended",
+        "plugin:prettier/recommended"
+    ],
     "parser": "@babel/eslint-parser",
-
     "parserOptions": {
         "sourceType": "module",
         "allowImportExportEverywhere": true,
