--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "millify": "^4.0.0",
     "next": "12.1.2",
     "nprogress": "^0.2.0",
+    "prop-types": "^15.8.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-horizontal-scrolling-menu": "^2.7.1",
